# build123d-models

./: .gitignore  CLAUDE.md  README.md  export.py  export_model.py  main.py  pyproject.toml  render_svg.py  run.py  show.py  transparent_viewer.py  viewer.py
exports/: cube.step
models/: __init__.py  cube.py  slotted_plate.py  spiral_vase_lampshade.py
